# mobidrom-hannibal

./: README.md  pyproject.toml
.github/workflows/: sevas_conversion.yml  tests.yml
hannibal/io/: PolygonReader.py
hannibal/providers/SEVAS/: constants.py
hannibal/providers/SEVAS/tables/: base.py  restrictions.py  road_speeds.py
test/util/: osm.py
