[project]
name = "hannibal"
version = "0.1.0"
description = "Aufbereitung von LKW-Restriktionen für die Verwendung in OSM-basiertem Routing"
authors = [{ name = "Christian Beiwinkel", email = "christian@gis-ops.com" }]
requires-python = "~=3.14"
readme = "README.md"
dependencies = [
    "dbfread>=2.0.7,<3",
    "pyyaml>=6.0.3,<7",
    "typer>=0.25.0",
    "fiona>=1.10.1,<2",
    "numpy>=2.4.4,<3",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "osmium==4.3.1",
]

[project.scripts]
sevas_utils = "scripts.sevas_utils:main"
hannibal = "cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0,<5",
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "geopandas>=1.1.3,<2",
    "pytest-cov>=7.1.0",
]
notebook = ["ipykernel>=7.2.0"]

[tool.uv]
default-groups = [
    "dev",
    "notebook",
]

[tool.hatch.build.targets.sdist]
include = [
    "hannibal",
    "scripts",
]

[tool.hatch.build.targets.wheel]
include = [
    "hannibal",
    "scripts",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]

[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`) codes by default and sort imports.
lint.select = ["E", "F", "I"]
lint.ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
lint.unfixable = []
line-length = 105

# Exclude a variety of commonly ignored directories.
exclude = [".venv", "__pycache__", ".git"]
